[metadata]
name = artellapipe-libs-pyblish
description = Pyblish plugins for ArtellaPipe
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/ArtellaPipe/artellapipe-libs-pyblish

[options]
zip_safe = false
include_package_data = true
packages=find:
install_requires=
    Qt.py
    pytest
    pytest-cov
    coveralls
    sphinx
    sphinx_rtd_theme
    tpDcc-libs-python
    tpDcc-core
    pyblish-base>=1.4
    pyblish-lite

[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1

[versioneer]
VCS = git
style = pep440
versionfile_source = artellapipe/libs/pyblish/_version.py
versionfile_build =
tag_prefix =
parentdir_prefix =