[metadata]
name = artellapipe-libs-pyblish
description = Pyblish plugins for ArtellaPipe
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/ArtellaPipe/artellapipe-libs-pyblish

[options]
zip_safe = false
include_package_data = true
packages=find:
install_requires=
    pyblish-base==1.8.7
    pyblish-lite==0.8.6
    tpDcc-libs-python
    tpDcc-core

[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1

[versioneer]
VCS = git
style = pep440
versionfile_source = artellapipe/libs/pyblish/_version.py
versionfile_build =
tag_prefix =
parentdir_prefix =